tests/ui/fail/enum.stderr
error: enums are not supported
 --> tests/ui/fail/enum.rs:4:17
  |
4 | #[derive(Debug, AsyncDebug)]
  |                 ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `AsyncDebug` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `async_debug` found for enum `Mixed` in the current scope
  --> tests/ui/fail/enum.rs:29:31
   |
5  | enum Mixed {
   | ---------- method `async_debug` not found for this
...
29 |         format!("{:?}", mixed.async_debug().await),
   |                               ^^^^^^^^^^^ method not found in `Mixed`
